[package]
name = "waysn"
version = "0.1.0"
edition = "2024"
description = "Gamma adjustments for Wayland"

[dependencies]
bytemuck = "1.24.0"
clap = { version = "4.5.48", features = ["derive", "wrap_help"] }
tempergb = "0.1.2"
tempfile = "3.23.0"
wayland-client = "0.31.11"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
