[package]
name = "waysn"
version = "0.1.0"
edition = "2024"
description = "Gamma adjustments for Wayland"

[dependencies]
bincode = "2.0.1"
bytemuck = "1.24.0"
clap = { version = "4.5.48", features = ["derive", "wrap_help"] }
tempergb = "0.1.2"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "io-util", "macros", "sync", "signal"] }
wayland-client = "0.31.11"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }

[[bin]]
name = "waysn-daemon"
path = "src/bin/server.rs"

[[bin]]
name = "waysn"
path = "src/bin/client.rs"
